# hydro-serving-cli

./: .gitignore  .python-version  Jenkinsfile  Makefile  README.md  jenkinsfile.disable.groovy  jenkinsfile.groovy  pyproject.toml  requirements.txt  setup.cfg  setup.py  version
.github/workflows/: ci.yaml  codeql-analysis.yml  release.yaml
docs/: client_library.md  commands.md  dev_deploy.md  folder_structure.md  index.md  working_with_messages.md
examples/: multiple.yaml  short.yaml
examples/application/: pipeline.yaml  simple.yaml
examples/deployment_configuration/: default.yaml  full.yaml
examples/full-apply-example/: 1-claims-model.yml  1-intel-xeon-env.yml  2-claims-model.yml  2-intel-xeon-env.yml  2-monitoring-models.yml  3-claims-model.yml  3-monitoring-models.yml  3-runtimes.yml  4-claims-app.yml  4-monitoring-apps.yml  4-monitoring-models.yml  5-claims-app.yml  5-claims-pipeline-app.yml  5-monitoring-apps.yml  5-runtimes.yml  6-claims-app.yml  6-claims-pipeline-app.yml  6-monitoring-models.yml  7-claims-pipeline-app.yml  7-monitoring-apps.yml
examples/kafka/: kafka_message.json
examples/local_dev/: serving.yaml
examples/new-python-model/: serving.py
examples/new_metadata/: 1-example-model.yml  serving.yml
examples/pipeline/: serving.yaml
hs/: settings.py
hs/cli/: context.py  (+1 more)
hydroserving/: __init__.py  cli.py  context_object.py  help.py  settings.py
tests/: cli_case.py  http_client_tests.py  test_cli.py  test_cli_case.py  test_deployment_configuration.py  test_helpers.py  test_http_client_tests.py  tests.py  testutils.py  utils.py
(+216 files in other folders)
